--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
     box-sizing: border-box;
 }
 body{
-    background-color: bisque;
+    background-color: rgb(26, 2, 53);
 }
 header{
     background-image: linear-gradient(rgb(41, 24, 46),rgb(39, 4, 63));
     height: 110px;
     display: flex;
     align-items: center;
+    box-shadow: 0 2px 4px black
 }
 .logo img{
     height: 70px;
@@ -31,7 +32,7 @@ a{
     font-size: 20px;
 }
 .dropdown-item{
-    font-size: 15px;
+    font-size: 12px;
 }
 .nav-item{
     font-size: 20px;
@@ -52,6 +53,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 .navbar .links{
     display: flex;
@@ -59,8 +61,8 @@ header{
 }
 
 .navbar .toggle-btn{
-    color: rgb(5, 5, 5);
-    font-size: 1.5rem;
+    color: white;
+    font-size: 1.7rem;
     cursor: pointer;
     display: none;
 }
@@ -89,20 +91,20 @@ header{
 .dropdown_menu{
     display: none;
     position: absolute;
+    
     right: 2rem;
     top: 60px;
     height: 0;
-    width: 300px;
-    background-color: rgba(255, 255, 255, 0.1);
+    width: 250px;
+    background-color: rgba(3, 2, 2, 0.839);
     border-radius: 10px;
     overflow: hidden;
-    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .dropdown_menu.open{
-    height: 240px;
+    height: 250px;
 }
 .dropdown_menu li{
-    padding: 0.7rem;
+    padding: .9rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -111,6 +113,12 @@ header{
     width: 100%;
     display: flex;
     justify-content: center;
+}
+.dropdown_menu li .action-btn:hover{
+    transform: scale(1.2);
+}
+.dropdown_menu{
+    z-index: 1000; /
 }
 
 
@@ -128,6 +136,12 @@ header{
         display: block;
     }
     
+}
+@media (max-width: 576px) {
+    .dropdown-menu{
+        left: 2rem;
+        width: unset;
+    }
 }
 
 
