--- a/style.css
+++ b/style.css
@@ -12,13 +12,20 @@ header{
     height: 110px;
     display: flex;
     align-items: center;
-    box-shadow: 0 2px 4px black
+    box-shadow: 0 2px 4px black;
+}
+.logo{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .logo img{
-    height: 70px;
+    height: 120px;
     width: auto;
     border-radius: 50%;
     transition: all 0.4;
+    margin-top: 25px;
 }
 .logo img:hover{
     transform: scale(1.2);
@@ -149,4 +156,23 @@ header{
     .logo {
         margin-left: 20px;
     }
+}
+
+#carousel{
+    margin-bottom: 25px;
+}
+.contenedor-img{
+    height: 300px;
+}
+.contenedor-img img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
+        padding: 10px;
+        border-radius: 10%;
+}
+.cuerp-card{
+    background-color: rgb(26, 2, 53);
+    box-shadow: 3px 3px 3px 6px black;
 }
