--- a/css/carrito.css
+++ b/css/carrito.css
@@ -5,3 +5,17 @@
     background-color: white;
     border-radius: 15%;
 }
+.continue-botton{
+    background-color: orangered;
+    padding: 0.5rem 1.5rem;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: scale .2 ease ;
+}
+.caja-boton-continuar{
+    margin-top: 12px;
+}
