--- a/style.css
+++ b/style.css
@@ -197,6 +197,70 @@ header{
     align-items: center;
     background-color: red;
 }
+
+/* Estilo de marcas */
+.brand-section {
+    padding: 20px 0;
+    background-color: rgb(26, 2, 53);
+  }
+  .brand-section h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #ffffff;
+  }
+  .brand-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .brand-item {
+    height: 70px;
+    width: 220px;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    transition: transform 0.3s;
+    color: yellow;
+  }
+  .brand-item img {
+    max-width: 100%;
+    height: auto;
+  }
+  .brand-item:hover {
+    transform: scale(1.05);
+  }
+  @media (max-width: 1200px) {
+    .brand-item {
+        height: 70px;
+        width: 220px;
+    }
+  }
+  @media (max-width: 765px) {
+    .brand-item {
+        height: 50px;
+        width: 100px;
+    }
+  }
+  @media (max-width: 768px) {
+    .brand-item {
+      flex: 1 1 calc(50% - 20px);
+    }
+  }
+  @media (max-width: 576px) {
+    .brand-item {
+      flex: 1 1 calc(100% - 20px);
+    }
+  }
+
+
+
+
+/* Footer y estilos */
 footer{
     background-image: linear-gradient(rgb(41, 24, 46),rgb(39, 4, 63));
     transition: 0.3ms;
