--- a/style.css
+++ b/style.css
@@ -199,21 +199,21 @@ header{
 }
 
 /* Estilo de marcas */
-.brand-section {
+.marcas-section {
     padding: 20px 0;
     background-color: rgb(26, 2, 53);
   }
-  .brand-section h2 {
+  .marcas-section h2 {
     text-align: center;
     margin-bottom: 20px;
     color: #ffffff;
   }
-  .brand-grid {
+  .marcas-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   }
-  .brand-item {
+  .marcas-item {
     height: 70px;
     width: 220px;
     margin: 10px;
@@ -227,33 +227,35 @@ header{
     transition: transform 0.3s;
     color: yellow;
   }
-  .brand-item img {
+  .marcas-item img {
     max-width: 100%;
     height: auto;
   }
-  .brand-item:hover {
+  .marcas-item:hover {
     transform: scale(1.05);
   }
   @media (max-width: 1200px) {
-    .brand-item {
+    .marcas-item {
         height: 70px;
         width: 220px;
     }
   }
   @media (max-width: 765px) {
-    .brand-item {
+    .marcas-item {
         height: 50px;
         width: 100px;
     }
   }
   @media (max-width: 768px) {
-    .brand-item {
-      flex: 1 1 calc(50% - 20px);
+    .marcas-item {
+      height: 70px;
+      width: 150px;
     }
   }
   @media (max-width: 576px) {
-    .brand-item {
-      flex: 1 1 calc(100% - 20px);
+    .marcas-item {
+      height: 70px;
+      width: 150px;
     }
   }
 
