--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,12 +1,17 @@
 #total{
     height: 50px;
     width: 150px;
-    border: solid orangered;
-    background-color: white;
-    border-radius: 15%;
+    background-color: orangered;
+    border-radius: 5%;
+    border:  solid rgb(255, 255, 255);
     box-shadow: 0.2rem 0.1rem rgb(56, 55, 55);
 }
-
+#total-modal{
+    height: 2.3rem;
+    width: 6rem;
+    border: solid green;
+    border-radius: 5%;
+}
 .continue-botton{
     background-color: yellow;
     padding: 0.5rem 1.5rem;
