--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,9 +1,9 @@
 #total{
     height: 50px;
     width: 150px;
-    background-color: orangered;
+    background-color: rgb(255, 255, 255);
     border-radius: 5%;
-    border:  solid rgb(255, 255, 255);
+    border:  solid black;
     box-shadow: 0.2rem 0.1rem rgb(56, 55, 55);
 }
 #total-modal{
@@ -18,7 +18,7 @@
     border: none;
     outline: none;
     border-radius: 10px;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
     cursor: pointer;
 }
