--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,6 +1,6 @@
 #total{
     display: flex;
-    background-color: rgba(24, 5, 47, 0.886);
+    background-color: rgba(75, 23, 139, 0.744);
     color: white;
     text-transform: uppercase;
     border-top-right-radius: 1rem;
@@ -16,7 +16,7 @@
 }
 #boton-abrir-modal{
     border: 0;
-    background-color: yellow;
+    background-image: linear-gradient(rgb(238, 93, 117),rgb(234, 101, 234));
     padding: 1rem;
     color: rgb(0, 0, 0);
     text-transform: uppercase;
@@ -25,7 +25,7 @@
 }
 #main{
     min-height: 75vh;
-}
+} 
 .tabla-img{
     background-color: transparent;
 }
