--- a/css/admin.css
+++ b/css/admin.css
@@ -19,6 +19,7 @@ body{
     margin: 0;
     padding: 0;
 }
+/* Nav styles */
 header{
     background-image: linear-gradient(rgb(41, 24, 46),rgb(39, 4, 63));
     height: 110px;
@@ -106,7 +107,7 @@ header{
     scale: 0.9;
 }
 
-/*Menu dropdown*/
+/* Nav responsive*/
 
 .dropdown_menu{
     display: none;
@@ -173,6 +174,7 @@ header{
 main{
     min-height: 75vh;
 }
+/* Footer styles */
 footer{
     background-image: linear-gradient(rgb(41, 24, 46),rgb(39, 4, 63));
     transition: 0.3ms;
@@ -190,3 +192,47 @@ footer{
     }
 
 }
+
+/* tabla styles */
+
+#contenedor-tabla{
+    width: 100%;
+    overflow-x: auto;
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+    min-width: 800px;
+}
+
+th,td{
+    padding: 8px 12px;
+    border: 1px solid #ccc;
+    text-align: left;
+}
+td img {
+    display: block;
+    margin: 0 auto; 
+    max-width: 100px; 
+    height: auto; 
+  }
+
+  @media (max-width: 600px) {
+    table, thead, tbody, th, td, tr {
+      display: block;
+    }
+
+    thead tr {
+      display: none;
+    }
+
+    tr {
+      margin-bottom: 10px;
+    }
+
+    td {
+      position: relative;
+      padding-left: 50%;
+      text-align: right;
+    }
+  }
