--- a/style.css
+++ b/style.css
@@ -331,11 +331,20 @@ footer a:hover{
 }
 
 #modalLogin{
-    font-size: 15px; 
+    font-size: 16px; 
     font-weight: 800;
+    color: pink;
 }
 #modalRegistro{
     font-size: 15px; 
     font-weight: 800;
+}
+
+.cabeza-modal{
+    background-image: linear-gradient(rgb(209, 24, 55),rgb(151, 54, 151));
+}
+.cuerpo-modal{
+    background: black;
+    color: white;
 }
 
