--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ footer a:hover{
     transform: scale(1.3);
 }
 
-#modalLogin{
+.modalLogin{
     font-size: 16px; 
     font-weight: 800;
     color: pink;
@@ -338,6 +338,7 @@ footer a:hover{
 #modalRegistro{
     font-size: 15px; 
     font-weight: 800;
+    color: pink;
 }
 
 .cabeza-modal{
