--- a/css/producto.css
+++ b/css/producto.css
@@ -19,6 +19,7 @@ body{
     margin: 0;
     padding: 0;
 }
+
 header{
     background-image: linear-gradient(rgb(41, 24, 46),rgb(39, 4, 63));
     height: 110px;
@@ -197,22 +198,64 @@ main{
     footer a:hover{
         transform: scale(1.3);
     }
-    #boton-carrito-producto{
+
+
+    #boton-carrito-producto {
         border: 0;
-        background-image: linear-gradient(rgb(238, 93, 117),rgb(173, 54, 173));
+        background-image: linear-gradient(rgb(41, 24, 46), rgb(138, 13, 127));
         padding: 1rem;
         color: rgb(255, 255, 255);
         text-transform: uppercase;
         border-radius: 1rem;
     }
-    #boton-carrito-producto :hover{
-        transform: scale(1.2);
-    }
-    #contenedor-imagen-producto{
+
+    #contenedor-imagen-producto {
         border: solid black;
         border-radius: 1rem;
+        overflow: hidden;
+        width: 100%;
     }
-    #contenedor-imagen-producto img{
-        width: 100%; 
+
+    #contenedor-imagen-producto img {
         border-radius: 1rem;
+        width: 100%;
+        height: auto;
+    }
+
+    .categoria, .precio, #descripcion {
+        text-transform: uppercase;
+    }
+
+    #contenedor {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    #contenedor .col {
+        margin-bottom: 1rem;
+        flex: 0 0 100%;
+    }
+
+    @media (min-width: 768px)  {
+        #contenedor {
+            flex-direction: row;
+            text-align: left;
+        }
+
+        #contenedor .col {
+            flex: 1;
+            max-width: 100%;
+            text-align: center;
+        }
+
+        #contenedor-imagen-producto {
+            max-width: 600px;
+        }
+
+        #contenedor .col:last-child {
+            margin-bottom: 0;
+        }
     }
