fix , ultimando detalles

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -217,3 +217,23 @@ footer{
     text-transform: uppercase;
     border-radius: 1rem;
 }
+
+
+.modalLogin{
+    font-size: 16px; 
+    font-weight: 800;
+    color: pink;
+}
+#modalRegistro{
+    font-size: 15px; 
+    font-weight: 800;
+    color: pink;
+}
+
+.cabeza-modal{
+    background-image: linear-gradient(rgb(209, 24, 55),rgb(151, 54, 151));
+}
+.cuerpo-modal{
+    background: black;
+    color: white;
+}
